# projectsENSEIRB

./: Makefile  README.md  automate.dot  fichier.sh  plot.gp  pom.xml  run_tests.sh
3-5-6TDP/: README.md
3-5-6TDP/3tdp/: CMakeLists.txt  createGraph.sh
3-5-6TDP/3tdp/res/: matrix_test_B
3-5-6TDP/3tdp/src/: bench.c  test.c
3-5-6TDP/3tdp/src/fox_mult/: mult.c  mult.h
3-5-6TDP/3tdp/src/util/: matrix.c  proc.c  proc.h
3-5-6TDP/5tdp-hk/: CMakeLists.txt  configTDP.pbs  generateGraph.sh
3-5-6TDP/5tdp-hk/src/benchmark/: main.c
3-5-6TDP/5tdp-hk/src/mylapack/: mylapack.h
3-5-6TDP/6tdp-hk/: README.md  createPerf.sh
3-5-6TDP/6tdp-hk/src/: Makefile  life_mpi.c  life_omp.c  life_pthread_unfinished.c  util_mpi.c  util_mpi.h
3tdp/: CMakeLists.txt  README  buildPlafrim.sh  createGraph.sh
3tdp/res/: matrix_test_B  matrix_test_C
3tdp/src/: bench.c  main.c  test.c
3tdp/src/fox_mult/: mult.c  mult.h
3tdp/src/util/: cblas_mkl.h  matrix.c  matrix.h  proc.c  proc.h
4TDP/: README.md
4TDP/LancerRayons/: buildPlafrim.sh  createGraph.sh  dataGraph.gp
4TDP/LancerRayons/include/: types_tdp.h
4TDP/LancerRayons/src/: comm.h  definitions.h  img.mpi-thread.c
5tdp/: CMakeLists.txt  README  buildPlafrim.sh  configTDP.pbs
5tdp-fh/: configTDP.pbs
5tdp-fh/src/myblas/: daxpy.c  dgemv.c  dger.c
5tdp-fh/src/test/: test-util.c
5tdp-hk/: README
5tdp-hk/src/myblas/: dtrsm.c  myblas.h
5tdp/src/: main.c
5tdp/src/benchmark/: bench-dgemm.c  bench-generic.c  bench.h  main.c
5tdp/src/myblas/: ddot.c  dgemm.c  dger.c  dscal.c  dtrsm.c  myblas.h
5tdp/src/mylapack/: dgesv.c  dgetf2.c  dgetrf.c  dtrsm.c  mylapack.h
5tdp/src/test/: test-myblas.c  test-mylapack.c  test-util.c
5tdp/src/util/: perf.c  util.c  util.h
6tdp/: life_seq.c
6tdp-fh/: life_seq.c
6tdp-fh/src/: life_omp.c  life_seq.c
6tdp-hk/: README.md  createGraph.sh  createPerf.pbs  graph1.gp  graph2.gp
6tdp-hk/src/: Makefile  life_mpi.c  life_omp.c  life_pthread.c  life_seq.c  util_mpi.c  util_mpi.h
6tdp/src/: Makefile  life_omp.c  life_seq.c
CouchBase/: pom.xml
LancerRayons/include/: type.h  types_tdp.h
LancerRayons/src/: Makefile  img.basic.c  img.mpi-thread.c
LancerRayons/temp-loulou/: comm.c
bench/: 06-sum-tab[1..n].gp  31-switch-many.gp  31pthread.old  32-switch-many-join.gp  33-switch-many-join-LIFO.gp  51-fibonacci.gp  create_graph.sh  fichier.sh  plot.gp
compilationI2/doc/: doc.tex
compilationI2/src/: Makefile  README  concat.c  concat.h  grammar.y  local2.y  scanner.l  tree.c  tree.h
compilationI2/src/input/: drive.input  test.c
compilationI2/src/result/: entete.ll  pied.ll
docs/: fonc.tex  ordo.tex  pageGarde.tex  rapport.tex  valid.tex
src/: Makefile  conf.make
src/core/: Makefile  ordo.c  preemption.c  thread.c
src/includes/: common_types.h  manip_list.h  my_signal.h  ordo.h  preemption.h  signal.h  thread.h
src/main/java/pg306/client/: App.java  MonitorTask.java
src/main/java/pg306/server1/: App.java  Monitor1.java  MonitorTask.java
src/main/java/pg306/utils/: CreateSampleDocuments.java  DBConnexion.java  DBDocument.java  DBResult.java  DataValue.java  MonitorAbstract.java
src/others/: Makefile  manip_list.c  my_signal.c  signal.c
src/prog_tests/: 06-somme_tableau.c  07-signal-test.c  17-thread-cancel.c  51-fibonacci.c  89-preemption.c  Makefile  contextes.c
src/prog_tests/test_signal/: main.c
usersThreads/: Makefile  README.md  run_tests.sh  valgrind_tests.sh
usersThreads/bench/: 06-sum-tab[1..n].gp  31-switch-many.gp  31.old  32-switch-many-join.gp  33-switch-many-join-LIFO.gp  51-fibonacci.gp
usersThreads/docs/: cancel.tex  fonc.tex  pageGarde.tex  preemption.tex  signal.tex  valid.tex
usersThreads/src/: Makefile
usersThreads/src/core/: ordo.c  thread.c
usersThreads/src/includes/: manip_list.h  preemption.h  thread.h
usersThreads/src/others/: Makefile  my_signal.c
usersThreads/src/prog_tests/: 06-sum-tab[1..n].c  12-join-main.c  17-thread-cancel.c  33-switch-many-join-LIFO.c  51-fibonacci-FIFO.c  51-fibonacci-LIFO.c  Makefile  contextes.c
